修复依赖问题