@@ -7,6 +7,8 @@ import com.hospital.cycle.domain.CycleRuleBase;
 import com.hospital.cycle.mapper.CycleRuleBaseMapper;
 import com.hospital.cycle.mapper.CycleRuleMapper;
 import org.dromara.common.core.exception.ServiceException;
+import org.dromara.common.core.service.StudentService;
+import org.dromara.common.core.service.domain.Student;
 import org.dromara.common.core.utils.MapstructUtils;
 import org.dromara.common.core.utils.StringUtils;
 import org.dromara.common.mybatis.core.page.TableDataInfo;
@@ -15,9 +17,6 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import lombok.RequiredArgsConstructor;
-import org.dromara.system.domain.SysUserStudent;
-import org.dromara.system.domain.vo.SysUserStudentVo;
-import org.dromara.system.mapper.SysUserStudentMapper;
 import org.springframework.stereotype.Service;
 import com.hospital.cycle.domain.bo.CycleStudentBo;
 import com.hospital.cycle.domain.vo.CycleStudentVo;
@@ -46,8 +45,8 @@ public class CycleStudentServiceImpl implements ICycleStudentService {
 
     private final CycleStudentMapper baseMapper;
     private final CycleRuleMapper ruleMapper;
-    private final SysUserStudentMapper studentMapper;
     private final CycleRuleBaseMapper ruleBaseMapper;
+    private final StudentService studentService;
 
     /**
      * 查询学员规则关联
@@ -117,7 +116,7 @@ public class CycleStudentServiceImpl implements ICycleStudentService {
                     && ObjectUtil.equals(b.getRuleId(), a.getRuleId())
                 )
             )
-            .collect(Collectors.toList());
+            .toList();
         //新增
         if (!add.isEmpty()){
             baseMapper.insertBatch(add);
@@ -153,13 +152,13 @@ public class CycleStudentServiceImpl implements ICycleStudentService {
         }
         //获取list中所有的userId
         Set<Long> userIds = list.stream().map(CycleStudent::getUserId).collect(java.util.stream.Collectors.toSet());
-        List<SysUserStudent> students = studentMapper.selectList(Wrappers.<SysUserStudent>lambdaQuery().in(SysUserStudent::getUserId, userIds));
+        List<Student> students = studentService.selectStudentByUserIds(userIds);
         if (students.isEmpty()||students.size()!=userIds.size()){
             throw new ServiceException("选择人员有误，请重新选择");
         }
         //如果规则开启了专业，判断学员是否有专业，并且专业是否符合
         if(YES.equals(cycleRule.getBaseFlag())){
-            Set<Long> userBaseId = students.stream().map(SysUserStudent::getBaseId).collect(java.util.stream.Collectors.toSet());
+            Set<Long> userBaseId = students.stream().map(Student::getBaseId).collect(java.util.stream.Collectors.toSet());
             //获取规则的专业
             List<CycleRuleBase> ruleBases = ruleBaseMapper.selectList(Wrappers.<CycleRuleBase>lambdaQuery().eq(CycleRuleBase::getRuleId, ruleId));
             if (ruleBases.isEmpty()){
